--- a/doc/thesis/thesis.tex
+++ b/doc/thesis/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass{report}
 \usepackage[left=3cm,top=2cm,right=3cm]{geometry}
 
+\usepackage{colortbl}
 \usepackage{times}
 \usepackage[siunitx]{circuitikz}
 %\usetikzlibrary{trees}
